--- a/Rubidium/res/values/strings.xml
+++ b/Rubidium/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Rubidium</string>
-    <string name="title_section1">Section 1</string>
+    <string name="app_name">Rubidium Grocery List App</string>
+    <string name="title_section1">Grocery List</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
