--- a/Rubidium/res/values/strings.xml
+++ b/Rubidium/res/values/strings.xml
@@ -7,7 +7,11 @@
     <string name="title_section3">Item List</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
-    <string name="action_settings">Settings</string>
-
+    <string name="action_about">About</string>
+    <string name="action_help">Help</string>
+    <string name="action_clear_purchased">Clear purchases</string>
+    <string name="action_unmark_all">Unshop</string>
+    <string name="action_clear_info">Clear</string>
+    <string name="action_add_new_store">New Store</string>
+    
 </resources>
